# MLIR-Toy

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
app/: CMakeLists.txt  ErrorCode.h  main.cpp
cmake/: CompilerWarnings.cmake  LLVM.cmake  PreventInSourceBuilds.cmake  StandardConfiguration.cmake  StaticAnalyzer.cmake
include/: simple_library.h
include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td
src/: AST.cpp  CMakeLists.txt  simple_library.cpp
src/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
src/parser/: AST.cpp
test/: .gitignore  CMakeLists.txt  lexer_tests.cpp  parser_tests.cpp
test/lexer/: CMakeLists.txt  lexer_tests.cpp
test/llvm/: CMakeLists.txt  alloc.mlir  broadcast.toy  constant.mlir  function.toy  lit.cfg.py
test/mlir/: CMakeLists.txt  alloca-llvm.mlir  broadcast.toy  constant-affine.mlir  constant.toy  function.toy  implicit_return.toy  lit.cfg.py  multiple-affine.mlir  ops.toy  opt-affine.mlir  print-llvm.mlir  reshape_constant.toy  reshape_nested.toy  shape-inference-pass.mlir  shape-inference.mlir  transpose-affine.mlir  transpose.toy
test/parser/: CMakeLists.txt  parser_tests.cpp
test/toy/: CMakeLists.txt  broadcast-affine.toy  broadcast.toy  constant.toy  error_semantics.toy  function.toy  implicit_return.toy  lit.cfg.py  ops.toy  reshape_constant.toy  reshape_nested.toy  transpose.toy
